// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dio delete should delete a dio 1`] = `
Array [
  Object {
    "dio_id": 2,
    "name": "test",
    "room_id": 2,
  },
]
`;

exports[`Dio findByIdAndUpdate should update a dio 1`] = `
Array [
  Object {
    "dio_id": 1,
    "name": "updated",
    "room_id": 1,
  },
  Object {
    "dio_id": 2,
    "name": "test",
    "room_id": 2,
  },
]
`;

exports[`Dio save should save a new dio 1`] = `
Array [
  Object {
    "dio_id": 3,
    "name": "test-save",
    "room_id": 1,
  },
]
`;
